<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/margin_padding_20dp"
        android:paddingRight="@dimen/margin_padding_20dp">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:layout_marginTop="@dimen/margin_padding_20dp"
                    android:paddingLeft="@dimen/margin_padding_10dp"
                    android:text="@string/email_hint" />

                <TextView
                    android:id="@+id/textemilhist"
                    style="@style/TextViewStyte2"
                    android:layout_width="wrap_content"
                    android:freezesText="true"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_20dp"
                    android:paddingLeft="@dimen/margin_padding_10dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/login_emailid"
                style="@style/Ed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_3dp"
                android:drawableLeft="@mipmap/ic_mail"
                android:drawablePadding="@dimen/margin_padding_10dp"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_3dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:layout_marginTop="@dimen/margin_padding_10dp"
                    android:paddingLeft="@dimen/margin_padding_10dp"
                    android:text="@string/password" />

                <TextView
                    android:id="@+id/textpasshist"
                    style="@style/TextViewStyte2"
                    android:freezesText="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_10dp"
                    android:paddingLeft="@dimen/margin_padding_10dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/login_password"
                style="@style/Ed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_launcher_password"
                android:drawablePadding="@dimen/margin_padding_10dp"
                android:gravity="center_vertical"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_3dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/forgot_password"
                style="@style/TextViewStyte3"
                android:freezesText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/margin_padding_10dp"
                android:text="@string/forgot_password" />

            <android.support.v7.widget.CardView
                android:id="@+id/loginBtn_cardView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_padding_10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:text="@string/textbtn_login"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_14sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/createAccount"
                style="@style/TextViewStyte3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_padding_3dp"
                android:paddingRight="@dimen/margin_padding_10dp"
                android:text="@string/create_account" />

            <TextView
                style="@style/TextViewStyte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/text_with" />


            <android.support.v7.widget.CardView
                android:id="@+id/loginface_cardView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_padding_10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/login_face_Btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:text="@string/login_with_facebook"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_14sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </RelativeLayout>
</ScrollView>