<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textforgot"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/margin_padding_30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textforgot"
                android:paddingLeft="@dimen/margin_padding_20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@mipmap/ic_mail"
                android:drawablePadding="@dimen/margin_padding_10dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_padding_10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black" />

            <android.support.v7.widget.CardView
                android:id="@+id/submit_cardView"
                android:layout_width="@dimen/sizewidth_150dp"
                android:layout_height="@dimen/btn_size"
                android:layout_marginTop="@dimen/margin_padding_30dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="25dp"
                android:layout_gravity="right">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:text="@string/btn_submit"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_16sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

</RelativeLayout>